Kreatrix's changelog

0.12.0
	+ TypeError added

0.11.1
	+ fixed bug in objects without parentslot
	+ fixed few small bugs

0.11.0
	+ Many optimazitions
	+ New bytecode and faster interpretation
	+ Added module "bytecode"
	+ String %s and %p substition
	+ Many small improvements

0.10.1
	+ Local import improved
	+ VM log support
	+ Fixed bug in module gtk

0.10
	+ Module "gtk" added
	+ Module "time" added
	+ Module "random" added
	+ Fixed few bugs in module "xml"
	+ Slots && and || in true/false was renamed to /\ and \/
	+ Slots with modules have been moved into separated parent of Lobby
	+ ObjectExtensions now supports inheritance
	+ KREATRIX_MODULES_PATH can now contains more paths (seperated by colon)

0.9 
	+ New compiler front-end
	+ Module "xml" added (wrapper for libxml2)
	+ Wrapgen added (tool for creating wrappers)
	+ Generator of documentation completely rewritten
	+ Module "socket" improved
	+ Prototypes Array2d and Point added

0.8
	+ New syntax and semantics of "locals" slots
	+ Threads support added
	+ Importing of modules improved
	+ Freezing/Unfreezing slots
	+ New way of calling GC
	+ Exceptions can be registered in core for easier acces from C code.
	+ Some minor bugs fixed

0.7
    + Parametr -c renamed to -C. "-c cmd" now evaluate command
	+ Equality tests for Set and Dictionary
	+ Shallow copy added
	+ Modules in now installed into own directories
	+ Fixed memory leak in compiler
	+ Fixed bug in kxbaseset

0.6
	+ Added read-write pair operator (<-)
    + New syntax for slot:update:
	+ Resend added
    + path for modules can be set by enviroment variable 
	  KREATRIX_MODULES_PATH
	+ Comparation completly rewritten
	+ Hash for objects
	+ Dictionary rewritten
	+ New basic object "Set"
	+ Literal character
	+ Added compilers parameter -c
	+ List message inject:into: added
	+ ScopedBlock message valueWith: renamed to value:
	+ Added feature for long return in closures

0.5.1
	+ bug fix in loading modules

0.5 
	+ string compile 
	+ VM halt added