@@ -2,6 +2,7 @@ Kreatrix's changelog
 
 0.12.0
 	+ TypeError added
+	+ TimeValue added
 
 0.11.1
 	+ fixed bug in objects without parentslot
